--- a/src/app/home/inventory/inventory.component.html
+++ b/src/app/home/inventory/inventory.component.html
@@ -3,11 +3,11 @@
     <div class="card-header card-header-top">
       <span class="margin-align-title card-header-title">
         <div class="font-icon-wrapper font-icon-lg">
-          <i class="fa fa-capsules icon-gradient bg-happy-itmeo"> </i> Inventory List
+          <i class="fa fa-capsules icon-gradient bg-happy-itmeo"> </i> {{ 'Inventory List' | translate }}
         </div>
       </span>
       <div class="btn-actions-pane-right">
-        <i class="pe-7s-cart icon-gradient bg-happy-itmeo"> </i> Inventory List
+        <i class="pe-7s-cart icon-gradient bg-happy-itmeo"> </i> {{ 'Inventory List' | translate }}
       </div>
     </div>
     <div class="card-body">
@@ -36,16 +36,16 @@
               </div>
               <div class="position-relative form-check padding-bot-input">
                 <label class="form-check-label low-stock">
-                  <input type="checkbox" name="low_stock_qty" [(ngModel)]="filterItem.low_stock_qty" class="form-check-input"> <span style="color: white">Low Stock QTY</span> &nbsp;
+                  <input type="checkbox" name="low_stock_qty" [(ngModel)]="filterItem.low_stock_qty" class="form-check-input"> <span style="color: white">{{ 'Low Stock QTY' | translate }}</span> &nbsp;
                 </label>
               </div>
               <div class="position-relative form-check">
                 <button type="button" (click)="filterList()" class="btn btn-info">
-                  Filter
+                  {{ 'Filter' | translate }}
                 </button>
                 &nbsp;
                 <button type="button" (click)="resetList()" class="btn btn-warning">
-                  Reset
+                  {{ 'Reset' | translate }}
                 </button>
               </div>
             </form>
@@ -54,9 +54,9 @@
           <table class="mb-0 table table-bordered pull-right summary" style="font-size: 14px; width: 40%; margin-bottom: 20px !important;">
               <thead>
                   <tr>
-                      <th style="width: 25%;">Total CPU</th>
-                      <th style="width: 25%;">Total RPU</th>
-                      <th style="width: 25%;">Total Profit</th>
+                      <th style="width: 25%;">{{ 'Total CPU' | translate }}</th>
+                      <th style="width: 25%;">{{ 'Total RPU' | translate }}</th>
+                      <th style="width: 25%;">{{ 'Total Profit' | translate }}</th>
                   </tr>
               </thead>
               <tbody>
@@ -74,13 +74,13 @@
             <thead>
               <tr>
                   <th>#</th>
-                  <th class="td_text_align_left" width="50%">Product Name</th>
-                  <th>Barcode</th>
-                  <th>QTY</th>
-                  <th>CPU (Tk.)</th>
-                  <th>RPU (Tk.)</th>
-                  <th>Low Stock Alert Qty</th>
-                  <th>Action</th>
+                  <th class="td_text_align_left" width="50%">{{ 'Product Name' | translate }}</th>
+                  <th>{{ 'Barcode' | translate }}</th>
+                  <th>{{ 'Qty' | translate }}</th>
+                  <th>{{ 'CPU' | translate }} {{ currency }}</th>
+                  <th>{{ 'RPU' | translate }} {{ currency }}</th>
+                  <th>{{ 'Low Stock Alert Qty' | translate }}</th>
+                  <th>{{ 'Action' | translate }}</th>
               </tr>
             </thead>
             <tbody>
@@ -128,7 +128,7 @@
         <div id="logo">
           <span class="pharmacy">{{ itemDetails.medicine_name }}</span>
           <h1 class="pdf-div" style="font-size: 1.5em">
-            Barcode# {{ itemDetails.barcode }}
+            {{ 'Barcode' | translate }}# {{ itemDetails.barcode }}
           </h1>
         </div>
       </header>
@@ -139,10 +139,10 @@
   </div>
   <div id="print-div">
     <button id="print-button" (click)="printInvoice('print-modal')" class="btn btn-success btn-xs">
-      Print
+      {{ 'Print' | translate }}
     </button>
     <button id="close-button" (click)="closeModal('print-modal')" class="btn btn-warning btn-xs">
-      Close
+      {{ 'Close' | translate }}
     </button>
   </div>
 </jw-modal>
