--- a/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
+++ b/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
@@ -3,11 +3,11 @@
     <div class="card-header card-header-top">
       <span class="margin-align-title card-header-title">
         <div class="font-icon-wrapper font-icon-lg">
-          <i class="fa fa-capsules icon-gradient bg-happy-itmeo"> </i> Stock Report
+          <i class="fa fa-capsules icon-gradient bg-happy-itmeo"> </i> {{ 'Stock Report' | translate }}
         </div>
       </span>
       <div class="btn-actions-pane-right">
-        <i class="pe-7s-cart icon-gradient bg-happy-itmeo"> </i> Stock Report
+        <i class="pe-7s-cart icon-gradient bg-happy-itmeo"> </i> {{ 'Stock Report' | translate }}
       </div>
     </div>
     <div class="card-body">
@@ -30,16 +30,16 @@
                 />
               </div>
               <button type="button" (click)="filterList()" id="filter-medicine-btn" class="btn btn-info search-div"> 
-                Filter
+                {{ 'Filter' | translate }}
               </button> &nbsp;
               <button type="button" (click)="resetList()" class="btn btn-warning">
-                Reset
+                {{ 'Reset' | translate }}
               </button> &nbsp;
               <button type="button" (click)="exportStockReport()" class="btn btn-success">
-                <i class="fa fa-download"></i> Download Excel
+                <i class="fa fa-download"></i> {{ 'Download Excel' | translate }}
               </button>
               <button type="button" (click)="exportStockReportPDF()" class="btn btn-danger">
-                <i class="fa fa-file-pdf"></i> Download PDF
+                <i class="fa fa-file-pdf"></i> {{ 'Download PDF' | translate }}
               </button>
             </form>
         </div>
@@ -47,10 +47,10 @@
           <table class="mb-0 table table-bordered pull-right summary" style="font-size: 14px; width: 40%; margin-bottom: 20px !important;">
               <thead>
                   <tr>
-                      <th style="width: 20%;">Total Qty</th>
-                      <th style="width: 20%;">Total CPU</th>
-                      <th style="width: 20%;">Total RPU</th>
-                      <th style="width: 20%;">Total Profit</th>
+                      <th style="width: 20%;">{{ 'Total Qty' | translate }}</th>
+                      <th style="width: 20%;">{{ 'Total CPU' | translate }}</th>
+                      <th style="width: 20%;">{{ 'Total RPU' | translate }}</th>
+                      <th style="width: 20%;">{{ 'Total Profit' | translate }}</th>
                   </tr>
               </thead>
               <tbody>
@@ -69,12 +69,12 @@
                 <thead>
                   <tr>
                       <th>#</th>
-                      <th style="width: 50%;">Product Details</th>
-                      <th>Stock Qty</th>
-                      <th>Qty In</th>
-                      <th>Qty Out</th>
-                      <th>CPU (৳)</th>
-                      <th>RPU (৳)</th>
+                      <th style="width: 50%;">{{ 'Item Description' | translate }}</th>
+                      <th>{{ 'Stock Qty' | translate }}</th>
+                      <th>{{ 'Qty In' | translate }}</th>
+                      <th>{{ 'Qty Out' | translate }}</th>
+                      <th>{{ 'CPU' | translate }} {{ currency }}</th>
+                      <th>{{ 'RPU' | translate }} {{ currency }}</th>
                   </tr>
                 </thead>
                 <tbody>
